[package]
name = "depres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "3.1"
infer = "0.15"
which = "5.0"
elf = "0.7"
anyhow = "1.0"
shlex = "1.2"
regex = "1.10"
libloading = "0.8"
findshlibs = "0.10"

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)